{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 29,
  "lineage": "aea10c37-ccbb-858d-28e1-20568cc3d0e6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:416228035380:internet-gateway/igw-00a085aa0e7b71001",
            "id": "igw-00a085aa0e7b71001",
            "owner_id": "416228035380",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-080f6e86ba40729df"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtprivate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:416228035380:route-table/rtb-0fcd77419f48d8401",
            "id": "rtb-0fcd77419f48d8401",
            "owner_id": "416228035380",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rt-(vpc-one)-private"
            },
            "tags_all": {
              "Name": "rt-(vpc-one)-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-080f6e86ba40729df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtpublic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:416228035380:route-table/rtb-01fc298a2af949e51",
            "id": "rtb-01fc298a2af949e51",
            "owner_id": "416228035380",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00a085aa0e7b71001",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-(vpc-one)-public"
            },
            "tags_all": {
              "Name": "rt-(vpc-one)-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-080f6e86ba40729df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-095dd6b8ada6eb1cc",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ffed359653f279c5",
            "route_table_id": "rtb-01fc298a2af949e51",
            "subnet_id": "subnet-095dd6b8ada6eb1cc"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtpublic",
            "aws_vpc.myvpc",
            "data.aws_subnets.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-087f51a8c17d1ebd5",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0090ae56acef76e11",
            "route_table_id": "rtb-0fcd77419f48d8401",
            "subnet_id": "subnet-087f51a8c17d1ebd5"
          },
          "dependencies": [
            "aws_route_table.rtprivate",
            "aws_vpc.myvpc",
            "data.aws_subnets.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:416228035380:security-group/sg-03244f811955a825b",
            "description": "Allow inbound traffic on port 80 and 443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03244f811955a825b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Port 443 in",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Port 80 in",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_80_443",
            "name_prefix": "",
            "owner_id": "416228035380",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_80_443"
            },
            "tags_all": {
              "Name": "allow_80_443"
            },
            "timeouts": null,
            "vpc_id": "vpc-080f6e86ba40729df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:416228035380:subnet/subnet-095dd6b8ada6eb1cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-095dd6b8ada6eb1cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "416228035380",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-1-public",
              "SubnetType": "public"
            },
            "tags_all": {
              "Name": "subnet-1-public",
              "SubnetType": "public"
            },
            "vpc_id": "vpc-080f6e86ba40729df"
          },
          "dependencies": [
            "aws_vpc.myvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:416228035380:subnet/subnet-087f51a8c17d1ebd5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087f51a8c17d1ebd5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "416228035380",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-2-private",
              "SubnetType": "private"
            },
            "tags_all": {
              "Name": "subnet-2-private",
              "SubnetType": "private"
            },
            "vpc_id": "vpc-080f6e86ba40729df"
          },
          "dependencies": [
            "aws_vpc.myvpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:416228035380:vpc/vpc-080f6e86ba40729df",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07b5415593ecf17e6",
            "default_route_table_id": "rtb-0f34228a4e126a8ec",
            "default_security_group_id": "sg-07fd286676bf477b9",
            "dhcp_options_id": "dopt-0948fd144f13310bb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-080f6e86ba40729df",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f34228a4e126a8ec",
            "owner_id": "416228035380",
            "tags": {
              "Name": "vpc-one"
            },
            "tags_all": {
              "Name": "vpc-one"
            }
          }
        }
      ]
    }
  ]
}